--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,26 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.buildlog/
-.history
-.svn/
-migrate_working_dir/
+# Entornos / secretos
+.env
+.env.*
+*.keystore
+*.jks
+*.p12
+*.pem
+*.key
+*.cer
 
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
+# Firebase/iOS
+google-services.json
+GoogleService-Info.plist
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/IDE
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.packages
+build/
+.idea/
+.vscode/
 
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Sistemas
+.DS_Store
+Thumbs.db
